[WFCORE-3962] Refactoring shell scripts to eliminate duplications.