@@ -50,18 +50,9 @@ if "x%JAVA_HOME%" == "x" (
   set "JAVA=%JAVA_HOME%\bin\java"
 )
 
-"%JAVA%" --add-modules=java.se -version >nul 2>&1 && (set MODULAR_JDK=true) || (set MODULAR_JDK=false)
-
-if "%MODULAR_JDK%" == "true" (
-  echo "%JAVA_OPTS%" | findstr /I "\-\-add\-modules" > nul
-  if errorlevel == 1 (
-    rem Set default modular jdk options
-    set JAVA_OPTS=%JAVA_OPTS% --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-    set JAVA_OPTS=%JAVA_OPTS% --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-    set JAVA_OPTS=%JAVA_OPTS% --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
-    set JAVA_OPTS=%JAVA_OPTS% --add-modules=java.se
-  )
-)
+rem set default modular jvm parameters
+call common.bat :setDefaultModularJvmOptions "%JAVA_OPTS%"
+set "JAVA_OPTS=%JAVA_OPTS% %DEFAULT_MODULAR_JVM_OPTIONS%"
 
 rem Find jboss-modules.jar, or we can't continue
 set "JBOSS_RUNJAR=%JBOSS_HOME%\jboss-modules.jar"
