@@ -1,5 +1,7 @@
 #!/bin/sh
 
+. ./common.sh
+
 DIRNAME=`dirname "$0"`
 GREP="grep"
 
@@ -53,18 +55,9 @@ if [ "x$JAVA" = "x" ]; then
     fi
 fi
 
-$JAVA --add-modules=java.se -version > /dev/null 2>&1 && MODULAR_JDK=true || MODULAR_JDK=false
-
-if [ "$MODULAR_JDK" = "true" ]; then
-    MODULAR_OPTS=`echo $JAVA_OPTS | $GREP "\-\-add\-modules"`
-    if [ "x$MODULAR_OPTS" = "x" ]; then
-        # Set default modular jdk options
-        JAVA_OPTS="$JAVA_OPTS --add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-        JAVA_OPTS="$JAVA_OPTS --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
-        JAVA_OPTS="$JAVA_OPTS --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
-        JAVA_OPTS="$JAVA_OPTS --add-modules=java.se"
-    fi
-fi
+# Set default modular JVM options
+setDefaultModularJvmOptions $JAVA_OPTS
+JAVA_OPTS="$JAVA_OPTS $DEFAULT_MODULAR_JVM_OPTIONS"
 
 # For Cygwin, switch paths to Windows format before running java
 if $cygwin; then
